syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "Protos/driver.proto";
import "Protos/vehicle.proto";
import "Protos/response.proto";

option csharp_namespace = "Fleetmanagement.GrpcAPI";

package request;

service Request
{
	rpc GetRequests (RequestsRequest) returns (stream RequestModel);
	rpc SaveRequest (RequestModel) returns (SuccessResponse);
}

message RequestsRequest { }

message RequestModel
{
	int32 Id = 1;
	string RequestType = 2;
	string Status = 3;
	google.protobuf.Timestamp PrefDate1 = 4;
	google.protobuf.Timestamp PrefDate2 = 5;
	driver.DriverModel Driver = 6;
	vehicle.VehicleModel Vehicle = 7;
}
